--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
 	<head>
-		<meta charset="UTF-8">
-		<meta name="Document-state" content="Static" />
-		<meta name="URL" content="absolute_url" />
-		<meta name="Distribution" content="global" />
-		<meta name="Resource-type" content="document" />
-		<meta name="robots" content="all" />
-		<meta name="revisit-after" content="1 days" />
-		<meta name="google-site-verification" content="q7mDR-c-V4nPNwEk4X5Vf1XqV9B3epiajBa8L7gZ6ZM" />
-		<meta name='yandex-verification' content='6ca27b58987c713c' />
-
 		<%= render 'shared/title' %>			
 		<%= csrf_meta_tag %>	
 		<%= render 'layouts/javascripts' %>			
@@ -21,57 +11,49 @@
 		<%-#= render 'shared/cloud' %>		
 		<div class="wrapper">
 			<div class="content">
-				<div class="content-left">														
-					
-					<!-- VK Widget -->															
-					
-					<div id="vk_groups"></div>
-					<script type="text/javascript">
-						VK.Widgets.Group("vk_groups", {mode: 0, width: "200", height: "300"}, 34545540);
-					</script>			
-				
-					<!-- /VK Widget -->													
+				<div class="content-left">																			
+					<%= render 'shared/vk' %>								
 					
 					<div style="padding-left:20px;">
-					<a class="banner" href="#" target="_blank"><%= image_tag("banner.jpg") %></a>
-					</div>
-					
+						<a class="banner" href="#" target="_blank"><%= image_tag("banner.jpg") %></a>
+					</div>					
+							
 					<a class="banner" href="http://можем-всё.рф" target="_blank"><%= image_tag("banner-mogem.jpg") %></a><br/>
 					<table>
 					<tr>
-					<td>
-						<!-- webmoney attestation label#F57E7E9C-FB5A-4CCD-A52F-8653DAB57BD3 begin --> 
-						<a href="https://passport.webmoney.ru/asp/certview.asp?wmid=338868942902" target=_blank>
-						<img border="0" src="http://passport.webmoney.ru/images/atstimg/88x31_user/88x31_wm_v_blue_on_white_ru.png"/>
-						</a>
-						<!-- webmoney attestation label#F57E7E9C-FB5A-4CCD-A52F-8653DAB57BD3 end --> 						
-					</td>
-					<td>
-						<!-- begin WebMoney Transfer : accept label -->
-						<a href="http://www.megastock.ru/" target="_blank"><img src="/assets/acc_blue_on_white_ru.png" alt="www.megastock.ru" border="0"></a>
-						<!-- end WebMoney Transfer : accept label -->					
-					</td>
+						<td>
+							<!-- webmoney attestation label#F57E7E9C-FB5A-4CCD-A52F-8653DAB57BD3 begin --> 
+							<a href="https://passport.webmoney.ru/asp/certview.asp?wmid=338868942902" target=_blank>
+								<img border="0" src="http://passport.webmoney.ru/images/atstimg/88x31_user/88x31_wm_v_blue_on_white_ru.png"/>
+							</a>
+							<!-- webmoney attestation label#F57E7E9C-FB5A-4CCD-A52F-8653DAB57BD3 end --> 						
+						</td>
+						<td>
+							<!-- begin WebMoney Transfer : accept label -->
+							<a href="http://www.megastock.ru/" target="_blank"><img src="/assets/acc_blue_on_white_ru.png" alt="www.megastock.ru" border="0"></a>
+							<!-- end WebMoney Transfer : accept label -->					
+						</td>
 					</tr>
 					<tr>
-					<td>
-						<!-- Yandex.Metrika informer -->
-						<a href="http://metrika.yandex.ru/stat/?id=12085759&amp;from=informer"
-						target="_blank" rel="nofollow"><img src="http://bs.yandex.ru/informer/12085759/3_0_20ACFFFF_008CF0FF_1_pageviews"
-						style="width:88px; height:31px; border:0;" 
-						alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" 
-						onclick="try{Ya.Metrika.informer({i:this,id:12085759,type:0,lang:'ru'});return false}catch(e){}"/></a>
-						<!-- /Yandex.Metrika informer -->
-					</td>
-					<td>					
-						<!-- begin of Top100 code -->
-						<script id="top100Counter" type="text/javascript" src="http://counter.rambler.ru/top100.jcn?2776015"></script>
-						<noscript>
-						<a href="http://top100.rambler.ru/navi/2776015/">
-						<img src="http://counter.rambler.ru/top100.cnt?2776015" alt="Rambler's Top100" border="0" />
-						</a>
-						</noscript>
-						<!-- end of Top100 code -->					
-					</td>
+						<td>
+							<!-- Yandex.Metrika informer -->
+							<a href="http://metrika.yandex.ru/stat/?id=12085759&amp;from=informer"
+							target="_blank" rel="nofollow"><img src="http://bs.yandex.ru/informer/12085759/3_0_20ACFFFF_008CF0FF_1_pageviews"
+							style="width:88px; height:31px; border:0;" 
+							alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" 
+							onclick="try{Ya.Metrika.informer({i:this,id:12085759,type:0,lang:'ru'});return false}catch(e){}"/></a>
+							<!-- /Yandex.Metrika informer -->
+						</td>
+						<td>					
+							<!-- begin of Top100 code -->
+							<script id="top100Counter" type="text/javascript" src="http://counter.rambler.ru/top100.jcn?2776015"></script>
+							<noscript>
+							<a href="http://top100.rambler.ru/navi/2776015/">
+							<img src="http://counter.rambler.ru/top100.cnt?2776015" alt="Rambler's Top100" border="0" />
+							</a>
+							</noscript>
+							<!-- end of Top100 code -->					
+						</td>
 					</tr>
 					</table>					
 				</div>
