--- a/app/views/pages/advertisement.html.erb
+++ b/app/views/pages/advertisement.html.erb
@@ -9,7 +9,7 @@
 						<p>
 						Мы предлагаем размещение рекламы на нашем сайте, а также в мобильном <a href="/mobile-app">приложении "Сауны и бани"</a> для Android. 
 						Сайт содержит наиболее полную информацию по саунам и баням в Ижевске. Также в каталог добавляются сауны соседних городов. 
-						В месяц сайт посещают более 3000 человек и эта цифра растет. Сайт легко находится  
+						В месяц сайт посещают более 10000 уникальных пользователей и эта цифра растет. Сайт легко находится  
 						в поисковых системах Яндекс и Google по соответствующим поисковым запросам. 
 						</p>
 						
