--- a/app/views/coupon_deals/daily_process.html.erb
+++ b/app/views/coupon_deals/daily_process.html.erb
@@ -1,5 +1,1 @@
-<%= @coupon_deal.description %></br>
-<%= @coupon_deal.deal_url %></br>
-<%= @coupon_deal.image_url %></br>
-<%= @coupon_deal.price_old %></br>
-<%= @coupon_deal.price_new %></br>
+<%= @response %>
