--- a/app/views/pages/_slidorion.html.erb
+++ b/app/views/pages/_slidorion.html.erb
@@ -14,7 +14,7 @@
 							<a href="/saunas/bonaparte" target="_blank"><img src="images/slidorion/kazan/1.jpg"/ width="150" height="100"></a>
 						</td>
 						<td>
-							<a href="/saunas/prestige-house" target="_blank"><img src="images/slidorion/kazan/2.jpg"/ width="15%" height="100"></a>
+							<a href="/saunas/prestige-house" target="_blank"><img src="images/slidorion/kazan/2.jpg"/ width="150" height="100"></a>
 						</td>
 						<td>
 							<a href="/saunas/hotel-art" target="_blank"><img src="images/slidorion/kazan/3.jpg"/ width="150" height="100"></a>
@@ -33,13 +33,13 @@
 					</tr>
 					<tr>
 						<td>
-							<a href="/saunas/tri-topora" target="_blank"><img src="images/slidorion/izhevsk/1.jpg"/ width="98%" height="100"></a>
+							<a href="/saunas/tri-topora" target="_blank"><img src="images/slidorion/izhevsk/1.jpg"/ width="150" height="100"></a>
 						</td>
 						<td>
-							<a href="/saunas/otel-premier" target="_blank"><img src="images/slidorion/izhevsk/2.jpg"/ width="98%" height="100"></a>
+							<a href="/saunas/otel-premier" target="_blank"><img src="images/slidorion/izhevsk/2.jpg"/ width="150" height="100"></a>
 						</td>
 						<td>
-							<a href="/saunas/korolevskie-bani" target="_blank"><img src="images/slidorion/izhevsk/3.jpg"/ width="98%" height="100"></a>
+							<a href="/saunas/korolevskie-bani" target="_blank"><img src="images/slidorion/izhevsk/3.jpg"/ width="150" height="100"></a>
 						</td>						
 					</tr>					
 				</table>								
@@ -55,13 +55,13 @@
 					</tr>
 					<tr>
 						<td>
-							<a href="/saunas/chelni-prestizh" target="_blank"><img src="images/slidorion/chelni/1.jpg"/ width="98%" height="100"></a>
+							<a href="/saunas/chelni-prestizh" target="_blank"><img src="images/slidorion/chelni/1.jpg"/ width="150" height="100"></a>
 						</td>
 						<td>
-							<a href="/saunas/ararat" target="_blank"><img src="images/slidorion/chelni/2.jpg"/ width="98%" height="100"></a>
+							<a href="/saunas/ararat" target="_blank"><img src="images/slidorion/chelni/2.jpg"/ width="150" height="100"></a>
 						</td>
 						<td>
-							<a href="/saunas/banbas-poseidon" target="_blank"><img src="images/slidorion/chelni/3.jpg"/ width="98%" height="100"></a>
+							<a href="/saunas/banbas-poseidon" target="_blank"><img src="images/slidorion/chelni/3.jpg"/ width="150" height="100"></a>
 						</td>						
 					</tr>					
 				</table>	
@@ -77,13 +77,13 @@
 					</tr>
 					<tr>
 						<td>
-							<a href="/saunas/venezia" target="_blank"><img src="images/slidorion/yola/1.jpg"/ width="98%" height="100"></a>
+							<a href="/saunas/venezia" target="_blank"><img src="images/slidorion/yola/1.jpg"/ width="150" height="100"></a>
 						</td>
 						<td>
-							<a href="/saunas/virginia" target="_blank"><img src="images/slidorion/yola/2.jpg"/ width="98%" height="100"></a>
+							<a href="/saunas/virginia" target="_blank"><img src="images/slidorion/yola/2.jpg"/ width="150" height="100"></a>
 						</td>
 						<td>
-							<a href="/saunas/stone" target="_blank"><img src="images/slidorion/yola/3.jpg"/ width="98%" height="100"></a>
+							<a href="/saunas/stone" target="_blank"><img src="images/slidorion/yola/3.jpg"/ width="150" height="100"></a>
 						</td>						
 					</tr>					
 				</table>	
@@ -99,13 +99,13 @@
 					</tr>
 					<tr>
 						<td>
-							<a href="/saunas/ufimskie-bani" target="_blank"><img src="images/slidorion/ufa/1.jpg"/ width="98%" height="100"></a>
+							<a href="/saunas/ufimskie-bani" target="_blank"><img src="images/slidorion/ufa/1.jpg"/ width="150" height="100"></a>
 						</td>
 						<td>
-							<a href="/saunas/ufa-bochka" target="_blank"><img src="images/slidorion/ufa/2.jpg"/ width="98%" height="100"></a>
+							<a href="/saunas/ufa-bochka" target="_blank"><img src="images/slidorion/ufa/2.jpg"/ width="150" height="100"></a>
 						</td>
 						<td>
-							<a href="/saunas/nur" target="_blank"><img src="images/slidorion/ufa/3.jpg"/ width="98%" height="100"></a>
+							<a href="/saunas/nur" target="_blank"><img src="images/slidorion/ufa/3.jpg"/ width="150" height="100"></a>
 						</td>						
 					</tr>					
 				</table>	
