--- a/app/views/cities/city.html.erb
+++ b/app/views/cities/city.html.erb
@@ -1,12 +1,4 @@
-<!--
-<div>
-	<h1>Сауны и бани <%= @city.name2 %></h1>
-	<div class="title_description">
-	Люди всё чаще ходят в бани и сауны не только в целях укрепления здоровья, но и чтобы расслабиться, встретиться с друзьями, 
-	отметить праздник или провести корпоратив. Здесь вы сможете найти всю информацию о саунах <%= @city.name2 %> - адреса, телефоны, фото, цены и отзывы. Желаем хорошего отдыха!
-	</div>
-</div>	
--->
+<%= render 'shared/top_menu' %>
 <div class="main-page">	
 	<%= render 'shared/globalsearch' %>		
 	<%= render 'selectcity' %>	
