--- a/app/views/pages/avtobanya.html.erb
+++ b/app/views/pages/avtobanya.html.erb
@@ -7,37 +7,36 @@
 				<div class="extra_params _expanded">
 					<div class="about">
 						<p>Специально для нашего сайта владелец автобани Денис любезно согласился рассказать подробности реализации проекта.</p>
+						<br/>
 						
-						<center>
-							<img src="images/avto/1.jpg">
-						</center>
+						<center><img src="images/avto/1.jpg"></center><br/>
 						
 						<p>"Идею нашли в интернете. Собственно таких бань по стране много. Только в Воронеже три!" - рассказывает Денис, - 
 						"стали ездить близ лежащим областям в поисках машины. Смотрели "бычки" и ЗИЛы, но первые плохи по проходимости - буксуют даже на небольшом бездорожье, в
 						вторые потребляют очень много бензина. Были варианты ГАЗ-66 после консервации, но это - кот в мешке. Машина может выглядеть новой, но при 
 						длительной консервации все резиновые изделия в машине приходят в негодность. То есть такую машину пришлось бы долго и упорно перебирать." 										
-						</p>
+						</p><br/>
 								
 						<center>
 							<img src="images/avto/2.jpg">
-						</center>
+						</center><br/>
 						
 						<p>Машину в итоге нашли в тульской области - ранее состояла в воинской части, а теперь служит исключительно мирным целям. Всю зиму Денис с друзьями 
 						строили баню. Первым делом утеплили максииально. Затем корпус обшили деревом (предварительно дерево проморили и пролачили), 
 						поставили печки на дровах, бак на 300 литров, смонтировали систему подачи горячей воды в душ. 
-						</p>
+						</p><br/>
 						
 						<center>
 							<img src="images/avto/3.jpg">
-						</center>
+						</center><br/>
 						
 						<p>"По образованию я инженер АСУТП, в сантехнике не понимаю, пришлось разбираться. Были и коллапсы! Но сейчаc все работает как часы " - вспоминает Денис.
 						Для нагнетания давления воздуха, которое и выдавливает воду из бака в душ, используется штатная систему подкачки шин ГАЗ-66, а также автомобильный комппрессор.
-						</p>						
+						</p><br/>						
 						
 						<center>
 							<img src="images/avto/4.jpg">
-						</center>						
+						</center><br/>						
 
 						<p>К концу лета передвижная баня была готова. Официальная дата начала работы - 1 сентября. Ребята наняли двух водителей, открыли ИП, сделали сайт, дали рекламу на радио
 						 и скоро появился стабильный поток заказов. "В выходные и праздники - аврал, в будни поспокойней. Мы еще подружились с местными моржами, 
