--- a/app/views/pages/_slidorion.html.erb
+++ b/app/views/pages/_slidorion.html.erb
@@ -50,7 +50,7 @@
 				<table>
 					<tr>
 						<td colspan="3">
-							<a href="/izhevsk" target="_blanlk"><img src="images/slidorion/chelni/main.jpg" width="100%"/></a>		
+							<a href="/chelni" target="_blanlk"><img src="images/slidorion/chelni/main.jpg" width="100%"/></a>		
 						</td>
 					</tr>
 					<tr>
