--- a/app/views/pages/avtobanya.html.erb
+++ b/app/views/pages/avtobanya.html.erb
@@ -12,22 +12,22 @@
 						<center><img src="images/avto/1.jpg"></center><br/>
 						
 						<p>"Идею нашли в интернете. Собственно таких бань по стране много. Только в Воронеже три!" - рассказывает Денис, - 
-						"стали ездить близ лежащим областям в поисках машины. Смотрели "бычки" и ЗИЛы, но первые плохи по проходимости - буксуют даже на небольшом бездорожье, в
+						"стали ездить по близ лежащим областям в поисках машины. Смотрели "бычки" и ЗИЛы, но первые плохи по проходимости - буксуют даже на небольшом бездорожье, в
 						вторые потребляют очень много бензина. Были варианты ГАЗ-66 после консервации, но это - кот в мешке. Машина может выглядеть новой, но при 
 						длительной консервации все резиновые изделия в машине приходят в негодность. То есть такую машину пришлось бы долго и упорно перебирать." 										
 						</p><br/>
 								
 						<center>
-							<img src="images/avto/2.jpg">
+							<img src="images/avto/2.JPG">
 						</center><br/>
 						
 						<p>Машину в итоге нашли в тульской области - ранее состояла в воинской части, а теперь служит исключительно мирным целям. Всю зиму Денис с друзьями 
-						строили баню. Первым делом утеплили максииально. Затем корпус обшили деревом (предварительно дерево проморили и пролачили), 
+						строили баню. Первым делом утеплили максимально. Затем корпус обшили деревом (предварительно дерево проморили и пролачили), 
 						поставили печки на дровах, бак на 300 литров, смонтировали систему подачи горячей воды в душ. 
 						</p><br/>
 						
 						<center>
-							<img src="images/avto/3.jpg">
+							<img src="images/avto/3.JPG">
 						</center><br/>
 						
 						<p>"По образованию я инженер АСУТП, в сантехнике не понимаю, пришлось разбираться. Были и коллапсы! Но сейчаc все работает как часы " - вспоминает Денис.
@@ -39,13 +39,13 @@
 						</center><br/>						
 
 						<p>К концу лета передвижная баня была готова. Официальная дата начала работы - 1 сентября. Ребята наняли двух водителей, открыли ИП, сделали сайт, дали рекламу на радио
-						 и скоро появился стабильный поток заказов. "В выходные и праздники - аврал, в будни поспокойней. Мы еще подружились с местными моржами, 
-						 а они и в будние дни заказывают. Хотя ортодоксальные моржи против бани после заплывов, но а те кто попроще очень жалуют. 
+						 и скоро появился стабильный поток заказов. "В выходные и праздники - аврал, в будни по-спокойней. Мы еще подружились с местными моржами, 
+						 а они и в будние дни заказывают. Хотя ортодоксальные моржи против бани после заплывов, ну а те, кто по-проще, очень жалуют. 
 						 Для них скидки делаем, как постоянным клиентам." - раскрывает секерты успеха Денис. 						 
 						</p>						
 						
-						<p>Однако всех финансовых деталей Денис не раскрывает - коммерческая тайна. По его словам, окупаемость проекта - 10-12 месяцев. 
-						Обстоятельства вынуждают нанешнего владельца переезжать в другой город, поэтому в данный момент бизнес выставлен на продажу. 
+						<p>Однако всех финансовых деталей Денис не рассказывает - коммерческая тайна. По его словам, окупаемость проекта - 10-12 месяцев. 
+						Обстоятельства вынуждают нынешнего владельца переехать в другой город, поэтому в данный момент бизнес выставлен на продажу. 
 						</p>
 					</div>
 					<div class="clearing"></div>
