--- a/app/views/sauna_items/show.html.erb
+++ b/app/views/sauna_items/show.html.erb
@@ -1,5 +1,5 @@
 <div class="detail-page">
-	<%= render 'shared/navigation', :left_link => root_path, :left_label => t(:home), :right_label => @sauna.name %>		
+	<%= render 'shared/navigation', :left_link => @sauna.address.city.path, :left_label => t(:home), :right_label => @sauna.name %>		
 	
 	<div class="round-box">
 		<%= render '/saunas/baseinfo' %>
