bug fix in top menu

--- a/app/views/saunas/show.html.erb
+++ b/app/views/saunas/show.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/social_scripts' %>
 
 <div class="detail-page">	
-	<%= render 'shared/navigation', :left_link => @sauna.address.city.path, :left_label => t(:home), :right_label => @sauna.name %>		
+	<%= render 'shared/navigation', :left_link => @sauna.address.city.path, :left_label => "Сауны @sauna.address.city.name2", :right_label => @sauna.name %>		
 	
 	<index>
 		<div class="round-box">
