--- a/app/views/shared/_top_menu.html.erb
+++ b/app/views/shared/_top_menu.html.erb
@@ -2,7 +2,7 @@
 	<table width="100%" cellspacing="10">
 		<tr>
 			<td align="center">
-				<a href="/map">Главная</a>
+				<a href="/">Главная</a>
 			</td>		
 			<td align="center">
 				<a href="/map">Сауны на карте</a>
