--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
 		<%-#= render 'shared/cloud' %>		
 		<div class="wrapper">
 			<div class="content">
-				<div class="content-left">																			
-					<%= render 'shared/vk' %>								
+				<div class="content-left">																																						
+					<%= render 'shared/vk' %>													
+					<%= render 'shared/aviasales' %>
 					
 					<!--
 					<div style="padding-left:20px;">
