--- a/app/views/shared/_top_menu.html.erb
+++ b/app/views/shared/_top_menu.html.erb
@@ -1,5 +1,5 @@
 <div class="main-font top-menu">
-	<table width="100%" cellspacing="10">
+	<table width="100%" cellspacing="0">
 		<tr>
 			<td align="center">
 				<a href="/">Главная</a>
@@ -7,6 +7,9 @@
 			<td align="center">
 				<a href="/map">Сауны на карте</a>
 			</td>
+			<td align="center">
+				<a href="/promotion">Cкидки и акции</a>
+			</td>			
 			<td align="center">
 				<a href="/notes">Статьи о бане</a>
 			</td>
